<?xml version="1.0" encoding="utf-8"?>
<!--
 * WebCaster - Chromecast Web Media Library
 * Copyright (C) 2013 Bryan Emmanuel
 *
 * This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 *  Bryan Emmanuel piusvelte@gmail.com
-->
<resources>

    <string name="app_name">WebCaster</string>
    <string name="action_settings">Settings</string>
    <string name="action_chromecast">Chromecast</string>
    <string name="action_refresh">Refresh</string>
    <string name="loading">Loading</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="select_cast_device">Select a cast device</string>
    <string name="preference_host">host</string>
    <string name="setting_host">Media Host</string>
    <string name="preference_app_id">app_id</string>
    <string name="setting_app_id">App Id</string>
    <string name="button_submit">Submit</string>

</resources>
