<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/setting_app_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_app_id" />

    <EditText
        android:id="@+id/setting_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_host"
        android:layout_below="@id/setting_app_id" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
